Closed Bug 1060114 Opened 11 years ago Closed 11 years ago

Partial surface uploading though BufferTextureClient is broken

Categories

(Core :: Graphics: Layers, defect)

29 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34
Tracking Status
firefox33 --- fixed
firefox34 --- fixed

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

This looks like a regression from 1040187. http://mxr.mozilla.org/mozilla-central/source/gfx/layers/composite/TextureHost.cpp#364 mFirstSource->GetUpdateSerial() == mUpdateSerial will never be true since we've just bumped mUpdateSerial. The mPartialUpdate part of the condition won't ever be true either since this is the only place we set it to true.
Attachment #8480927 - Flags: review?(bas)
Blocks: 983035
Comment on attachment 8480927 [details] [diff] [review] fix-partial-upload Review of attachment 8480927 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, but needs some comments.
Attachment #8480927 - Flags: review?(bas) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Comment on attachment 8480927 [details] [diff] [review] fix-partial-upload Approval Request Comment [Feature/regressing bug #]: OMTC [User impact if declined]: Drawing artifacts [Describe test coverage new/current, TBPL]: Nightly & Aurora [Risks and why]: Required if we uplift the fix for bug 1040187 [String/UUID change made/needed]: None
Attachment #8480927 - Flags: approval-mozilla-beta?
Comment on attachment 8480927 [details] [diff] [review] fix-partial-upload beta+. Approval already granted for bug 1040187. These changes will ship in beta2.
Attachment #8480927 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Made a silly rebase error. Backed out and re-landed. https://hg.mozilla.org/releases/mozilla-beta/rev/bca701646487
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: