Bug 1060114 - Fix partial surface uploading through BufferTextureClient. r=Bas, a=lmandel